--- a/docs/src/theme/DocPage/Layout/Main/styles.module.css
+++ b/docs/src/theme/DocPage/Layout/Main/styles.module.css
@@ -33,6 +33,7 @@
 @media (min-width: 997px) {
   .docMainContainer {
     flex-grow: 1;
+    width: Calc(100% - 300px);
   }
 
   .docMainContainerEnhanced {
